# alex

./: .gitignore  Cargo.toml  README.md  Rocket.toml
WWW/: index.html  index.html.back  package.json  style.css  webpack.config.js
WWW/src/components/: Hello.tsx  diary.tsx  hello.css
WWW/src/components/eva/: Eva.tsx
WWW/src/components/fileSeach/: Main.tsx  main.css
WWW/src/components/util/: util.tsx
migrations/2019-02-04-131113_create_users/: down.sql  up.sql
migrations/2019-02-04-131123_create_posts/: up.sql
src/: auth.rs  dairy.rs  errors.rs  files.rs  main.rs  template.rs  upload.rs  util.rs
src/database/: mod.rs  models.rs  schema.rs
src/mounts/: dairy.rs  files.rs  login.rs  mod.rs  upload.rs
src/my_eva/: mod.rs  my_db.rs
style/: style.css
templates/: base.html.tera  diary.html.tera  diaryList.html.tera  error.html.tera  files.html.tera  included.html.tera  index.html.tera  secure.html.tera
