[package]
name = "alex"
version = "0.0.1"
authors = ["silvius_seacoal"]
edition = "2018"

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
base64 = "0.9.3"
chrono = "0.4"
config = "0.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12"
futures-preview = "0.3.0-alpha.7"

eva = { path = "../eva" }

[profile.release]
debug = true